# DataLeague

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: fetch-data.yml
docs/: CNAME  index.html
docs/css/: app.css
docs/data/: .365cache.json  .365games_cache.json  cleansheets.json  leaders.json  meta.json  players.json  rounds.json  teams.json
docs/js/: app.js  data.js
fetcher/: __main__.py  cli.py  config.py  schemas.py
fetcher/clients/: footballcoil.py  marathonbet.py  scores365.py  sport5.py
fetcher/services/: fetcher.py  matcher.py  processor.py
tests/: test_matcher.py  test_processor.py  test_processor_rounds_team_id.py  test_processor_team_games.py  test_scores365_recent_form.py  test_scores365_standings.py
